--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   intl: ^0.19.0
   smooth_corner: ^1.1.0
   flutter_animate: ^4.5.0
+  uuid: ^4.5.1
+  collection: ^1.19.1
+  bloc: ^9.0.0
+  flutter_bloc: ^9.1.0
 
 dev_dependencies:
   flutter_test:
